# rtcom-accounts-plugin-jabber

./: .gitignore  README.md  configure.ac
data/: Makefile.am  jabber-advanced.glade  jabber-new-account.glade  jabber.profile
debian/: changelog  control  rtcom-accounts-plugin-jabber.install  rules
src/: Makefile.am  jabber-plugin.c
